# GutenbergOnomasticsExplorer

./: .gitignore  LICENSE  README.md  pyproject.toml
gutenbergonomasticsexplorer/: manage.py
gutenbergonomasticsexplorer/gutenbergapi/: apps.py
gutenbergonomasticsexplorer/gutenbergonomasticsexplorer/: asgi.py  settings.py  urls.py  wsgi.py
gutenbergonomasticsexplorer/onomasticsexplorer/: apps.py
notebooks/: embedd.ipynb  first_overview.ipynb
