[tool.poetry]
name = "gutenbergonomasticsexplorer"
version = "0.1.0"
description = ""
authors = ["thenodev <till.nikolaus.schaland@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
langchain = "^0.0.217"
pandas = "^2.0.2"
rdflib = "^6.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
