[tool.poetry]
name = "gutenbergonomasticsexplorer"
version = "0.1.0"
description = ""
authors = ["thenodev <till.nikolaus.schaland@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cohere = "^4.11.2"
langchain = "^0.0.222"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
